tests/ui/rmeta/rmeta_meta_main.stderr
error[E0560]: struct `Foo` has no field named `field2`
  --> $DIR/rmeta_meta_main.rs:13:19
   |
LL |     let _ = Foo { field2: 42 };
   |                   ^^^^^^ unknown field
   |
help: a field with a similar name exists
   |
LL -     let _ = Foo { field2: 42 };
LL +     let _ = Foo { field: 42 };
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0560`.
